tests/NormalTests/paczka2/big_fuzzy/93267748.err
Error in line 20: xFujvMwH4 S609 8,9
Error in line 23: 59tE55d A223 31,5
Error in line 21: xFujvMwH4 A40 92,8
Error in line 16: nb9aDqzmPVQ S578 319,1
Error in line 33: nb9aDqzmPVQ S609 73,48
Error in line 37: 59tE55d S609 55,4
Error in line 34: A40 S578 22,5
Error in line 45: A40 S609 48,1
Error in line 44: GWJ30qzu S609 43,7
Error in line 47: A40 A40 30,8
Error in line 51: A40 S578 50,4
Error in line 60: GWJ30qzu S578 1,7
Error in line 32: nb9aDqzmPVQ S609 23,5
Error in line 62: G9adfZv3gt S609 48,4
Error in line 83: nb9aDqzmPVQ A40 41,84
Error in line 88: xFujvMwH4 S578 152,5
Error in line 86: nb9aDqzmPVQ A40 66,7
Error in line 85: 59tE55d S578 67,4
Error in line 79: yj3ES S609 26,3
Error in line 101: nb9aDqzmPVQ S609 66,5
Error in line 102: nb9aDqzmPVQ S578 73,8
Error in line 89: xFujvMwH4 S609 2,5
Error in line 80: G9adfZv3gt A40 96,3
Error in line 108: A40 S609 42,6
Error in line 113: A40 A223 34,7
Error in line 121: A40 S578 14,8
Error in line 104: GWJ30qzu S578 10,3
Error in line 127: G9adfZv3gt A223 18,7
Error in line 100: 59tE55d S609 198,2
Error in line 137: A40 S609 21k,1
Error in line 145: nb9aDqzmPVQ A223 73,2
Error in line 151: nb9aDqzmPVQ A40 22,1
Error in line 122: A40 S609 2,6
Error in line 136: G9adfZv3gt S578 37,6
Error in line 163: nb9aDqzmPVQ S609 71,7
Error in line 164: nb9aDqzmPVQ S578 23,6
Error in line 147: xFujvMwH4 S609 126,7
Error in line 178: A40 A40 63,6
Error in line 169: G9adfZv3gt S578 71,3
Error in line 180: xFujvMwH4 A223 217,2
Error in line 185: G9adfZv3gt S609 4,0
Error in line 203: GWJ30qzu S609 74,9
Error in line 204: GWJ30qzu A223 84,6
Error in line 210: G9adfZv3gt S578 34,2
Error in line 229: yj3ES A223 54,86
Error in line 225: nb9aDqzmPVQ A40 42,0
Error in line 227: yj3ES S609 1,3
Error in line 240: 59tE55d A40 90,1
Error in line 231: yj3ES A223 160,5
